<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/title_back"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/petstore_48_dp"
        android:layout_marginTop="@dimen/statusBar_height"
        android:contentDescription="@null"
        android:paddingStart="@dimen/petstore_10_dp"
        android:src="@mipmap/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/petstore_48_dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/statusBar_height"
        android:fontFamily="SourceHanSansCN-Regular"
        android:gravity="center"
        android:text="@string/bind_phone"
        android:textColor="@color/petstore_black"
        android:textSize="@dimen/petstore_text_18_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/verify_phone"
        style="@style/input_box"
        android:layout_height="@dimen/petstore_50_dp"
        android:layout_marginStart="@dimen/petstore_20_dp"
        android:layout_marginTop="@dimen/petstore_20_dp"
        android:layout_marginEnd="@dimen/petstore_20_dp"
        android:hint="@string/input_phone"
        android:inputType="phone"
        android:paddingStart="@dimen/petstore_10_dp"
        android:paddingTop="@dimen/petstore_5_dp"
        android:paddingEnd="@dimen/petstore_10_dp"
        app:layout_constraintTop_toBottomOf="@+id/title_name"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/verify_code"
        style="@style/input_box"
        android:layout_height="@dimen/petstore_50_dp"
        android:layout_marginStart="@dimen/petstore_20_dp"
        android:layout_marginTop="@dimen/petstore_10_dp"
        android:layout_marginEnd="@dimen/petstore_20_dp"
        android:hint="@string/input_verify_code"
        android:inputType="number"
        android:paddingStart="@dimen/petstore_10_dp"
        android:paddingTop="@dimen/petstore_5_dp"
        android:paddingEnd="@dimen/petstore_140_dp"
        app:layout_constraintTop_toBottomOf="@+id/verify_phone"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/verify_gain"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/petstore_50_dp"
        android:layout_alignEnd="@+id/verify_code"
        android:gravity="center"
        android:paddingBottom="@dimen/petstore_5_dp"
        android:layout_marginEnd="@dimen/petstore_5_dp"
        android:text="@string/verify_code"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/petstore_text_18_sp"
        app:layout_constraintBottom_toBottomOf="@+id/verify_code"
        app:layout_constraintRight_toRightOf="@+id/verify_code"
        app:layout_constraintTop_toTopOf="@+id/verify_code"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verify_confirm"
        style="@style/btn_normal"
        android:layout_below="@+id/verify_code"
        android:layout_margin="@dimen/petstore_30_dp"
        android:text="@string/btn_confirm"
        app:layout_constraintTop_toBottomOf="@+id/verify_code"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>