<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="@dimen/petstore_20_dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:text="@string/iap_note_title"
        android:textStyle="bold"
        android:textColor="@color/petstore_black"
        android:textSize="@dimen/petstore_text_20_sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/petstore_30_dp"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:text="@string/iap_note_desc"
        android:textColor="@color/petstore_black"
        android:textSize="@dimen/petstore_text_18_sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/petstore_15_dp"
        android:layout_marginTop="@dimen/petstore_30_dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/iap_dialog_continue"
                style="@style/btn_normal"
                android:layout_width="@dimen/petstore_100_dp"
                android:layout_height="@dimen/petstore_40_dp"
                android:textAllCaps="false"
                android:background="@drawable/btn_nearby"
                android:text="@string/btn_contuine"
                android:textColor="@color/petstore_black" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/iap_dialog_cancel"
                style="@style/btn_normal"
                android:layout_width="@dimen/petstore_100_dp"
                android:layout_height="@dimen/petstore_40_dp"
                android:textAllCaps="false"
                android:background="@drawable/btn_green"
                android:text="@string/btn_cancel" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>